--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
             </ul>
 
 
-            <ul class="flex space-x-5 lg:flex  lg:pb-5  lg:pr-5 my-3 ">
-                <a href="https://www.facebook.com/nosoh.iq/" target="_blank"> <i class="fab fa-facebook lg:mx-1"
+            <ul class="lg:flex lg:space-x-5 lg:flex lg:mr-0 lg:pb-5  lg:pr-5 my-3 mr-3 ">
+                <a href="https://www.facebook.com/nosoh.iq/" target="_blank" class="ml-0"> <i class="fab fa-facebook "
                         style="font-size:30px;color:#1ebcc1;"></i></a>
-                <a href="https://www.instagram.com/nosoh.iq/?utm_medium=copy_link" target="_blank"> <i class="fab fa-instagram lg:mx-1"
+                <a href="https://www.instagram.com/nosoh.iq/?utm_medium=copy_link" target="_blank" class="ml-0"> <i class="fab fa-instagram "
                         style="font-size:30px;color: #1ebcc1;"></i></a>
-                <a href="tel:07823854818 "> <i class="fas fa-phone-square-alt lg:mx-1"
+                <a href="tel:07823854818 " class="ml-0"> <i class="fas fa-phone-square-alt "
                         style="font-size:30px;color: #1ebcc1;"></i></a>
 
 
@@ -229,7 +229,7 @@
         </div>
     </div>
     <div class="items-center flex justify-between "  style="background-color:#aeeef0; color: #462e81 ;">
-        <ul class="flex space-x-5 lg:flex lg:mx-5 ">
+        <ul class="flex space-x-5 lg:flex lg:mx-5 ml-3 ">
             <a href="#">
                 <li">من انا</li>
             </a>
@@ -237,7 +237,7 @@
         </ul>
 <p>tel:07823854818 </p>
 
-        <ul class="flex space-x-5 lg:flex  lg:py-5  lg:pr-5 ">
+        <ul class="lg:flex lg:space-x-5 lg:flex  lg:py-5  lg:pr-5 mr-3">
             <a href="https://www.facebook.com/nosoh.iq/" target="_blank"> <i class="fab fa-facebook lg:mx-1"
                     style="font-size:30px;"></i></a>
             <a href="https://www.instagram.com/nosoh.iq/?utm_medium=copy_link" target="_blank"> <i class="fab fa-instagram lg:mx-1"
